[package]
name = "tmt"
version = "0.1.0"
edition = "2021"
description = "A lightweight, platform-agnostic temperature monitoring tool that runs in the CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.1"
clap = { version = "3.2.22", features = ["derive"] }
libc = "0.2"
sysinfo = "0.26.3"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation-sys = "0.8"
smc = { git = "https://github.com/jay3332/rust-smc" }
