[package]
name = "tmt"
version = "0.1.0"
edition = "2021"
description = "A lightweight, platform-agnostic temperature monitoring tool that runs in the CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.1"
getopts = "0.2.21"
sysinfo = "0.26.3"

[target.'cfg(target_os = "macos")'.dependencies]
four-char-code = "0.0.5"
libc = "0.2.133"

[profile.release]
lto = "fat"
opt-level = "s"
strip = true
codegen-units = 1