[package]
name = "tmt"
version = "0.1.0"
edition = "2021"
authors = ["jay3332"]
description = "A lightweight, platform-agnostic temperature monitoring tool that runs in the CLI"
repository = "https://github.com/jay3332/tmt"

[workspace]
members = ["tmt_core"]

[dependencies]
ansi-to-tui = "2.0.0"
crossterm = "0.25"
getopts = "0.2"
tmt_core = { path = "tmt_core" }
tui = "0.19"

# [target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
# # Termion appears to be more lightweight than crossterm
# termion = "1.5"
# tui = { version = "0.19", default-features = false, features = ['termion'] }

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
opt-level = 3